Sizing for banner image - prevent stretch

--- a/dominicshaw.net/css/media.css
+++ b/dominicshaw.net/css/media.css
@@ -213,30 +213,19 @@ http://www.templatemo.com/tm-473-november
 	.Banner_sec .Center {width: 100%; padding: 0px 3%; }
 	.Banner_sec .bannerside { top: 144px; }
 	.Banner_sec .leftside { padding: 0px 0px 20px 0px; width: 100%; float: none; }
-	.Banner_sec .rightside { width: 99%;}
-    
-    /*.Banner_sec .rightside .Slider { display: none; }
-    .Banner_sec .rightside .Slider .text { display: none; }
-    .Banner_sec .rightside .Slider .text .Icon { display: none; }
-    .Banner_sec .rightside .Slider .text .Icon li { display: none; }
-    .Banner_sec .rightside .Slider .text .Lorem { display: none; }
-    .Banner_sec .rightside .Slider .text .Lorem p { display: none; }
-    .Banner_sec .rightside .Slider .text .Lorem p span { display: none; }
-    .Banner_sec .rightside .Shadow { display: none; }
-    .Banner_sec .rightside .prevBtn { display: none; }
-    .Banner_sec .rightside .nextBtn { display: none; }
-    .Banner_sec .rightside #slider li img { display: none; }*/	
 
+	.Banner_sec .rightside { width: 449px; float: none; margin: auto; }
+    
 	.Banner_sec .rightside .Slider { width: 100%;}
 	.Banner_sec .rightside .Slider .text { padding: 10px 10px; }
-	.Banner_sec .rightside .Slider .text .Icon { width: 28%; }
+	.Banner_sec .rightside .Slider .text .Icon { width: 40%; }
 	.Banner_sec .rightside .Slider .text li { padding: 0px 10px;}
-	.Banner_sec .rightside .Slider .text .Lorem { width: 70%; }
+	.Banner_sec .rightside .Slider .text .Lorem { width: 55%; }
 	.Banner_sec .rightside .Slider .text .Lorem p { font-size: 14px; }
-	.Banner_sec .rightside .Shadow { width: 105.5%; left: -16px; }
+	.Banner_sec .rightside .Shadow { display: none; }
 	.Banner_sec .rightside .prevBtn { top: 100px; left: 10px; }
 	.Banner_sec .rightside .nextBtn { top: 100px; right: 10px; }
-	.Banner_sec .rightside #slider li img { height: 280px; width: 100%;}
+	.Banner_sec .rightside #slider li img { height: 280px; width: 100%; }
 
 	.bgcolor { height: 50px; }
 
